--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
@@ -18,14 +19,14 @@
         <h2>Chat</h2></div>
     <div class="login">
         <div class="loginFacebook">
-            <button><span class="fa fa-facebook faceIcon"></span>Login with Facebook</button>
+            <button id="loginFacebook"><span class="fa fa-facebook faceIcon"></span>Login with Facebook</button>
         </div>
     </div>
 </div>
-<script
-        src="https://code.jquery.com/jquery-3.1.1.min.js"
+<script src="https://code.jquery.com/jquery-3.1.1.min.js"
         integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
         crossorigin="anonymous"></script>
+<script src="https://www.gstatic.com/firebasejs/3.6.5/firebase.js"></script>
 <script src="assets/js/app.js"></script>
 </body>
 </html>
